--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@
     display:none
   }
   
-  .title{
+  .title, .headerTitle{
     padding-left: 10px;
   }
   
@@ -45,10 +45,12 @@
   
   button {
     margin-left: 5px;
+    max-width: 20%;
   }
   
   input{
   margin-bottom: 5px;
+  max-width: 40%
   }
   
   #app {
